--- a/html/main.html
+++ b/html/main.html
@@ -10,5 +10,6 @@
         <input type="file" name="image" multiple>
         <input type="submit">
     </form>
+    <button onclick="location.href='/send'">get files from the server</button>
 </body>
 </html>
